canary/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-example-default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-example
      app.istio.io/subset: default
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-example
        app.istio.io/subset: default
    spec:
      containers:
        - name: nginx
          image: nginx:1.23
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-templates
              mountPath: /etc/nginx/templates
      volumes:
        - name: nginx-templates
          configMap:
            name: app-example-nginx-templates

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-example-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-example
      app.istio.io/subset: canary
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-example
        app.istio.io/subset: canary
    spec:
      containers:
        - name: nginx
          image: nginx:1.23
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-templates
              mountPath: /etc/nginx/templates
      volumes:
        - name: nginx-templates
          configMap:
            name: app-example-canary-nginx-templates
