canary/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: app-example
spec:
  selector:
    app.kubernetes.io/name: app-example
    app.kubernetes.io/type: default
  ports:
    - name: http
      port: 80
      targetPort: http

---

apiVersion: v1
kind: Service
metadata:
  name: app-example-canary
spec:
  selector:
    app.kubernetes.io/name: app-example
    app.kubernetes.io/type: canary
  ports:
    - name: http
      port: 80
      targetPort: http
