canary/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-example
spec:
  host: app-example
  subsets:
    - name: default
      labels:
        app.istio.io/subset: default
    - name: canary
      labels:
        app.istio.io/subset: canary
